Fix collapse component, add form component

--- a/src/sass/components/form/_form.sass
+++ b/src/sass/components/form/_form.sass
@@ -3,6 +3,9 @@
 
 	width: 100%
 
+	&__row
+		+relative()
+
 	&_block &__row
 		margin-bottom: 15px
 
@@ -21,6 +24,8 @@
 			&__row
 				flex: 1
 				+padding-x(getComp(gutter))
+				&:not(:last-child)
+					margin-right: 15px
 
 			&__submit
 				+size(100%)
@@ -53,14 +58,11 @@
 				bottom: 0
 				height: 1px
 				width: 100%
-				background-color: $color-brand-1
+				background-color: transparentize($color-black, 0.8)
 
-		+min(xs)
-			&__row
-				margin-top: 30px
 	@else
 		&__control
-			+input-default
+			+input-default()
 
 			border: 1px solid #ddd
 
