--- a/src/sass/docs/style.sass
+++ b/src/sass/docs/style.sass
@@ -4,6 +4,8 @@
 @import "../helpers/mixins/*"
 @import "../helpers/functions/*"
 
+@import "../vendor/collapse/collapse"
+
 +b('docs')
 	&__intro
 		padding-top: 90px
@@ -34,11 +36,12 @@
 			margin-top: 30px
 
 		&-inner
-
-			padding-bottom: 30px
-			margin-bottom: 30px
 			margin-left: 30px
-			border-bottom: 1px solid #e4e4e4
+
+			&:not(:last-child)
+				padding-bottom: 30px
+				margin-bottom: 30px
+				border-bottom: 1px solid #f4f4f4
 
 		&-title
 			position: relative
@@ -56,9 +59,8 @@
 
 		&-subtitle
 			margin-bottom: 10px
-			font-size: 20px
-			font-weight: bold
-			text-transform: uppercase
+			font-size: 16px
+			color: #a2a2a2
 
 	&__sidebar
 		&-list
